# Win11CopyPath

./: AppxManifest.in.xml  CMakeLists.txt  README.MD  command.cpp  config.h  config.in.h  installer.cpp  register.cpp  source.def  uninstaller.cpp
